infra/k8s/overlays/production/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mizline
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api.mizline.ir
        - order.mizline.ir
        - kitchen.mizline.ir
      secretName: mizline-tls
  rules:
    - host: api.mizline.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3003
    - host: order.mizline.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer
                port:
                  number: 3000
    - host: kitchen.mizline.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kitchen
                port:
                  number: 3001
